added news engine and products engine

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -44,5 +44,6 @@
   <%= yielded_head_libraries %>
   <%= yielded_head %>
 
+  <%= auto_discovery_link_tag(:rss, news_items_url(:format => 'rss')) %>
 
 </head>
